always use establishTabBoxGrab instead un/grabX*

BUG: 337853